feat: Migrate Jekyll site from Minima to Minimal Mistakes remote theme, adding new plugins, updating page layouts, and documenting the setup history.

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,14 @@ github_username:  compassute
 
 # Build settings
 markdown: kramdown
-theme: minima
+remote_theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+# Plugins
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
